tests/errors/test_77.x
// Identifier redeclared in tuple destructuring

fn main() -> void {

	let a = 21;


	let a, b = (21, 19);
	
}
